<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloInicio_hint"
            android:id="@+id/textViewTituloLogin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:height="91dp"
            android:textColor="#0c87e5"
            android:textSize="40dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsuario"
            android:layout_below="@+id/textViewTituloLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:hint="@string/Usuario_hint"
            android:height="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextClave"
            android:layout_below="@+id/editTextUsuario"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/Clave_hint"
            android:height="80dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ingresar_hint"
            android:id="@+id/buttonIngresar"
            android:height="60dp"
            android:layout_marginTop="58dp"
            android:layout_below="@+id/editTextClave"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#0757f8" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse_hint"
            android:id="@+id/buttonRegistrarse"
            android:height="60dp"
            android:layout_below="@+id/buttonIngresar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#FF0757F8" />

    </RelativeLayout>
</RelativeLayout>
